# Marine-Web

./: .env.example  .gitignore  .pr_agent.toml  README.md  main.py  requirements.txt
.github/: dependabot.yml
.streamlit/: config.toml
_core_backup/: visualizations.py
components/: cards.py  charts.py  helpers.py  layout.py  visualizations.py
config/: settings.py
core/: __init__.py  config.py
dashboard/: .gitignore  analysis.py  config.py  data_manager.py  main.py  pyproject.toml  utils.py  visualizations.py
dashboard/assets/css/: global.css  map_style.css
dashboard/assets/html/: metric_card_simple.html  vessel_card.html  vessel_detail_general.html
dashboard/back/conection/: conection.py
dashboard/back/connection/: conection.py  login.py
dashboard/back/query/: config_queries.py  queries.py  sensor_queries.py  update.py  user_queries.py
dashboard/back/src/: constants.py  forecast.py  graph_histories.py  heatmap.py  map.py  n_logic.py  styles.py  utils.py
dashboard/core/: analysis.py  config.py  database.py  utils.py  visualizations.py
dashboard/front/asset/style/css/: global.css  loader.css
dashboard/front/asset/style/html/: health_score_card.html  heatmap.html  vessel_history_header.html
dashboard/page/: analytics.py  audit.py  auth.py  clients.py  environmental.py  home.py  notifications.py  settings.py  system_config.py  user_management.py
dashboard/views/: admin.py  analytics.py  auth.py  clients.py  environment.py  monitoring.py  notifications.py
database/: dummy_data.sql  table.sql
db/: __init__.py  connection.py
htmx/: README.md  (+2 more)
(+197 files in other folders)
